--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Start</title>
+  <title>...</title>
 </head>
-  <script src="./lib/pixi.min.js"></script>
-  <script src="./board.js"></script>
-  <script src="./actor.js"></script>
-  <script src="./menu.js"></script>
+  <!--script src="./lib/pixi.min.js"></script-->
+  <!--script src="./board.js"></script-->
+  <!--script src="./actor.js"></script-->
+  <!--script src="./menu.js"></script-->
+  <script src="./dist/main.js"></script>
   <style>* {padding: 0; margin: 0}</style>
 <body>
-  <script type="text/javascript">
+<!--script type="text/javascript">
     let type = "WebGL"
     if(!PIXI.utils.isWebGLSupported()){
       type = "canvas"
@@ -119,6 +120,6 @@
 
     //Add the canvas that Pixi automatically created for you to the HTML document
     document.body.appendChild(app.view);
-  </script>
+  </script-->
 </body>
 </html>
